original/tests%20231224161151/compiler_output/CompilerOutput-F_98_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:15: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:23: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:31: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:39: error: sum(int) has private access in F
        long actual = F.sum((int) n);
                       ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:47: error: sum(int) has private access in F
        long actual = F.sum(n);
                       ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:55: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:63: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:71: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/F_98_1Test.java:79: error: sum(int) has private access in F
        int actual = F.sum(n);
                      ^
9 errors
